<resources>
    <string name="app_name">Crypto Currency App</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="search">Search</string>

    <string name="fragment_home_title">Coin List</string>
    <string name="fragment_detail_price">Price</string>
    <string name="usd">%.2f%n USD</string>
    <string name="euro">%.2f%n Euro</string>
    <string name="turkish_lira">%.2f%n TRY</string>
    <string name="fragment_detail_last_update">Last Update: %1$s</string>
    <string name="fragment_detail_title_description">Description</string>
    <string name="fragment_detail_title_other">Other Info</string>
    <string name="fragment_detail_hashing_algorithm">Hashing Algorithm: %1$s</string>
    <string name="fragment_detail_price_change_percentage">Price change percentage in 24h: %.2f%n</string>
    <string name="no_description">No description</string>
    <string name="no_info">No info</string>


    <string name="lorem_middle" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum do</string>
    <string name="empty_view_description">There is no content</string>
    <string name="change">Change</string>
    <string name="fragment_detail_refresh_time">Refresh Time: %1$d Second</string>
    <string name="fragment_detail_select_second">Select refresh time (second)</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="cannot_empty">Cannot be empty</string>
    <string name="register">Register</string>
    <string name="favorite">Favorite</string>

    <string name="notification_body">%1$s is changed: Percent: %.2f%n\n</string>
</resources>